site: mention CIMI; remove link to roadmap
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1214514 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -96,11 +96,12 @@
                 Backward compatibility across versions, providing long-term stability for scripts, tools and applications
               </li>
               <li>
-                Check the
-                <a href='roadmap.html' title='Roadmap'>
-                  roadmap
+                A separate
+                <a href='http://dmtf.org/standards/cloud'>
+                  CIMI
                 </a>
-                to see what we are working on
+                frontend, as well as CIMI API compliance tests and a simple CIMI
+                client application.
               </li>
             </ul>
           </div>
