Site: Updated RHEV-M instruction and added OpenStack and vSphere sections
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1236157 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -299,7 +299,20 @@
               <tr>
                 <td class='provider'>
                   vSphere
-                  <span>coming soon</span>
+                </td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+                <td class="supported">yes</td>
+              </tr>
+              <tr>
+                <td class='provider'>
+                  OpenStack
                 </td>
                 <td class="supported">yes</td>
                 <td class="supported">yes</td>
