site: update download links to point to TLP, not incubator

--- a/site/output/documentation.html
+++ b/site/output/documentation.html
@@ -127,7 +127,7 @@
         command will automatically fetch and install all other gems that the Deltacloud server
         needs if you don't already have these. As an alternative you can get the latest
         releases of Deltacloud from the
-        <a href='http://www.apache.org/dist/incubator/deltacloud/'>
+        <a href='http://www.apache.org/dist/deltacloud/'>
           Apache website.
         </a>
         <br />
