Minor change to website - Adds 'yes' to reboot for OpenNebula in driver functionality table
(recent v3.x OpenNebula driver update added the reboot action)

Signed-off-by: marios <marios@redhat.com>

--- a/site/output/developers.html
+++ b/site/output/developers.html
@@ -47,9 +47,9 @@
       <div class='container' id='content-deltacloud'>
         <h1>Contribute to the Deltacloud Project</h1>
         
-        <p><a title="The Apache Software Foundation" href="http://www.apache.org/">Apache</a> Deltacloud is
+        <p><a href="http://www.apache.org/" title="The Apache Software Foundation">Apache</a> Deltacloud is
         free, open source software licensed under the
-        <a title="The Apache License" href="http://www.apache.org/licenses/LICENSE-2.0">apache license</a>.
+        <a href="http://www.apache.org/licenses/LICENSE-2.0" title="The Apache License">apache license</a>.
         Please feel free to <a href="contact.html">contact us</a> if you have any questions about the
         project or with any suggestions on how to improve Deltacloud. The Deltacloud
         developer community is open to anyone that wants to contribute!</p>
