--- a/site/output/index.html
+++ b/site/output/index.html
@@ -233,7 +233,7 @@
                 <td class="supported">yes</td>
                 <td class="supported">yes</td>
                 <td class="supported">yes</td>
-                <td class="not-supported">no</td>
+                <td class="supported">yes</td>
                 <td class="supported">yes</td>
                 <td class="supported">yes</td>
                 <td class="supported">yes</td>
