--- a/site/output/drivers.html
+++ b/site/output/drivers.html
@@ -271,7 +271,7 @@
             <td class="supported">yes</td>
             <td class="supported">yes</td>
             <td class="supported">yes</td>
-            <td class="not-supported">no</td>
+            <td class="supported">yes</td>
             <td class="supported">yes</td>
             <td class="supported">yes</td>
             <td class="supported">yes</td>
