Site: Added Piwik tracking code to pages

--- a/site/output/client-ruby.html
+++ b/site/output/client-ruby.html
@@ -241,4 +241,22 @@
       </div>
     </div>
   </body>
+  <script type='text/javascript'>
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.salasaga.org/aeolus/piwik/" : "http://stats.salasaga.org/aeolus/piwik/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type='text/javascript'>
+    //<![CDATA[
+      try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+      } catch( err ) {}
+    //]]>
+  </script>
+  <noscript>
+    <p>
+      <img alt='' src='http://stats.salasaga.org/aeolus/piwik/piwik.php?idsite=1' style='border:0' />
+    </p>
+  </noscript>
 </html>
