--- a/site/output/developers.html
+++ b/site/output/developers.html
@@ -47,9 +47,9 @@
       <div class='container' id='content-deltacloud'>
         <h1>Contribute to the Deltacloud Project</h1>
         
-        <p><a href="http://www.apache.org/" title="The Apache Software Foundation">Apache</a> Deltacloud is
+        <p><a title="The Apache Software Foundation" href="http://www.apache.org/">Apache</a> Deltacloud is
         free, open source software licensed under the
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" title="The Apache License">apache license</a>.
+        <a title="The Apache License" href="http://www.apache.org/licenses/LICENSE-2.0">apache license</a>.
         Please feel free to <a href="contact.html">contact us</a> if you have any questions about the
         project or with any suggestions on how to improve Deltacloud. The Deltacloud
         developer community is open to anyone that wants to contribute!</p>
@@ -559,4 +559,22 @@
       </div>
     </div>
   </body>
+  <script type='text/javascript'>
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.salasaga.org/aeolus/piwik/" : "http://stats.salasaga.org/aeolus/piwik/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type='text/javascript'>
+    //<![CDATA[
+      try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+      } catch( err ) {}
+    //]]>
+  </script>
+  <noscript>
+    <p>
+      <img alt='' src='http://stats.salasaga.org/aeolus/piwik/piwik.php?idsite=1' style='border:0' />
+    </p>
+  </noscript>
 </html>
