Removed 'reboot' from the list of supported operations in RHEV-M. Added FGCP drivers to matrix (part 2)
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1353957 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/supported-providers.html
+++ b/site/output/supported-providers.html
@@ -214,7 +214,7 @@
       <td>yes</td>
       <td>yes</td>
       <td>yes</td>
-      <td>yes</td>
+      <td>no</td>
       <td>yes</td>
       <td>yes</td>
       <td>yes</td>
@@ -271,6 +271,20 @@
       <td>yes</td>
       <td>yes</td>
       <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+    </tr>
+<tr>
+<td class="provider">
+        <strong>FGCP</strong>
+      </td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>no</td>
       <td>yes</td>
       <td>yes</td>
       <td>yes</td>
