Removed list of supported regions in EC2 and say that we support all regions
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1353984 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/output/drivers.html
+++ b/site/output/drivers.html
@@ -601,7 +601,7 @@ The following table gives details about the credentials that must be provided fo
     </div>
     <div id="ec2" class="accordion-body collapse in">
       <div class="accordion-inner">
-      The providers for the EC2 driver correspond to AWS's regions, and currently are us-east-1, us-east-1, eu-west-1, ap-southeast-1.
+      The providers for the EC2 driver correspond to AWS's regions, and currently support all EC2 regions.
       </div>
     </div>
   </div>
