--- a/site/output/download.html
+++ b/site/output/download.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Instance states</title>
+    <title>Download</title>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -88,150 +88,113 @@
     <div class="container content">
 
       <p><br></p>
-
-<div class="row">
-  <div class="span9">
-
-<h3 id="instance-states">Instance states</h3>
-
+<h3>Download</h3>
 <p>
-Each cloud defines a slightly different lifecycle model for instances. In some clouds, instances start running immediately after creation, in others, they enter a pending state and you need to start them explicitly.
+  Version <b>1.0.0</b> of Apache Deltacloud is available. See the
+  <a href="https://git-wip-us.apache.org/repos/asf?p=deltacloud.git;a=blob;f=NEWS;h=2f113a2d2462fa7d45b4898932ca568d53820440;hb=HEAD">release notes</a>.
 </p>
-
 <p>
-Differences between clouds are modelled by expressing the lifecycle of an instance as a finite state machine and capturing it in an instance states entity.The API defines the following states for an instance:</p>
-
-<table class="table table-condensed table-striped">
-<thead><tr>
-<th>State</th>
-      <th>Meaning</th>
-    </tr></thead>
-<tbody>
-<tr>
-<td>start</td>
-      <td>an instance state before creation of an instance</td>
-    </tr>
-<tr>
-<td>pending</td>
-      <td>creation of an instance is in progress</td>
-    </tr>
-<tr>
-<td>running</td>
-      <td>an instance is running</td>
-    </tr>
-<tr>
-<td>shutting-down</td>
-      <td>an instance is stopped</td>
-    </tr>
-<tr>
-<td>stopped</td>
-      <td>an instance is stopped</td>
-    </tr>
-<tr>
-<td>finished</td>
-      <td>all resources for an instance have now been freed</td>
-    </tr>
-</tbody>
-</table>
-</div>
-  <div class="span3">
-
-<ul class="nav nav-list well">
-<li class="nav-header">
-    REST API
-  </li>
-  <li><a href="rest-api.html">Introduction</a></li>
-  <li><a href="api-entry-point.html">API entry point</a></li>
-  <li><a href="compute-resources.html">Compute resources</a></li>
-  <ul class="nav nav-list">
-<li><a href="compute-resources.html">Realms</a></li>
-    <li><a href="hardware-profiles.html">Hardware profiles</a></li>
-    <li><a href="images.html">Images</a></li>
-    <li class="active"><a href="#instance-states">Instance states</a></li>
-    <li><a href="instances.html">Instances</a></li>
-    <li><a href="keys.html">Keys</a></li>
-    <li><a href="firewalls.html">Firewalls</a></li>
-    <li><a href="addresses.html">Addresses</a></li>
-    <li><a href="load-balancers.html">Load balancers</a></li>
-  </ul>
-<li><a href="storage-resources.html">Storage resources</a></li>
-</ul>
-</div>
-</div>
-
-<p>
-The details of a particular instance describes also the actions (state transitions) which can be performed on the instance. If the state transition is marked as <strong>auto</strong>, the transition from one state to another is done automatically. The possible instance actions are:
+  Use the links below to download a distribution of Apache Deltacloud.
+  Alternatively you can use one of the <a href="http://www.apache.org/dyn/closer.cgi?path=incubator/deltacloud/">Apache mirrors</a>.
+  It is good practice to <a href="#verify">verify the integrity</a> of the distribution files,
+  especially if you are using one of our mirror sites. To do this, you must use the
+  signatures from our <a href="http://www.apache.org/dist/deltacloud/">main distribution directory</a>.
 </p>
-
-<table class="table table-condensed table-striped">
-<thead><tr>
-<th>Action</th>
-   <th>Meaning</th>
-  </tr></thead>
-<tbody>
+<h3 id="mirrors">Current release</h3>
+<table class="table"><tbody>
 <tr>
-<td>start</td>
-   <td>starts the instance</td>
-  </tr>
+<td><strong>server-gem</strong></td>
+      <td>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.gem">deltacloud-core-1.0.0.gem</a>
+        (
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.gem.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.gem.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.gem.sha1">SHA1</a>
+        )
+      </td>
+    </tr>
 <tr>
-<td>stop</td>
-   <td>stops (and for some providers shutdown) the instance</td>
-  </tr>
+<td><strong>server-sources</strong></td>
+      <td>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.tgz">deltacloud-core-1.0.0.tgz</a>
+        (
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.tgz.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.tgz.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-core-1.0.0.tgz.sha1">SHA1</a>
+        )
+      </td>
+    </tr>
 <tr>
-<td>reboot</td>
-   <td>reboots the instance</td>
-  </tr>
+<td><strong>client-gem</strong></td>
+      <td>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.gem">deltacloud-client-1.0.0.gem</a>
+        (
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.gem.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.gem.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.gem.sha1">SHA1</a>
+        )
+      </td>
+    </tr>
 <tr>
-<td>destroy</td>
-   <td>stops the instance and completely destroys it</td>
-  </tr>
-</tbody>
-</table><h4>Get an instance states entity</h4>
-
-<p>To retrieve the instance states entity for a back-end cloud use call <strong>GET /api/instance_states</strong>. The instance states entity defines possible transitions between various states of an instance, specific for each back-end cloud. As a result, instance states defines the finite state machine for instances from the given cloud.</p>
-
-<p>Example request:</p>
-
+<td><strong>client-sources</strong></td>
+      <td>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.tgz">deltacloud-client-1.0.0.tgz</a>
+        (
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.tgz.asc">PGP</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.tgz.md5">MD5</a>
+        <a href="http://www.apache.org/dyn/closer.cgi?path=deltacloud/stable/deltacloud-client-1.0.0.tgz.sha1">SHA1</a>
+        )
+      </td>
+    </tr>
+</tbody></table><p></p>
+<h4 id="archive">Old releases</h4>
+<p>
+  Older releases of Apache Deltacloud can be found <a href="http://archive.apache.org/dist/deltacloud/">here</a>. We highly recommend to <b>not use</b>
+  those releases but upgrade to the latest release.
+</p>
+<p></p>
+<h4 id="rubygems">Rubygems</h4>
+<p>
+  RubyGems.org is the Ruby community's gem hosting service. For most of the Ruby
+  developers it is the most convenient way how to download Apache Deltacloud.
+  We always push the major releases to Rubygems.org page. To download Apache
+  Deltacloud from there you can use <code>gem fetch deltacloud-core</code> or
+  <code>gem fetch deltacloud-client</code> commands. Please mind to <a href="#verify">verify</a> the downloaded sources.
+</p>
+<h3 id="sources">Getting the sources</h3>
+<p>
+  We provide an extensive amount of information about how to use the Apache
+  <a href="https://git-wip-us.apache.org/repos/asf/deltacloud.git">Deltacloud GIT repository</a> on <a href="getting-sources.html">this page</a>.
+</p>
+<h3 id="verify">Verify the integrity of the files</h3>
+<p>
+  <span class="label">Note:</span>
+  When downloading from a mirror please check the <a href="http://www.apache.org/dev/release-signing#md5">md5sum</a> and verify the
+  <a href="http://www.apache.org/dev/release-signing#openpgp">OpenPGP</a>
+  compatible signature from the main <a href="http://www.apache.org/">Apache
+  site</a>. Links are provided above (next to the release download link).
+</p>
+<p>
+  The PGP signatures can be verified using PGP or GPG. First download the <a href="http://www.apache.org/dist/deltacloud/KEYS">KEYS</a> as well as the
+  <code>asc</code> signature file for the relevant distribution. Make sure you get
+  these files from the <a href="http://www.apache.org/dist/deltacloud/">main
+  distribution directory</a>, rather than from a mirror. Then verify the
+  signatures using:
+</p>
 <pre>
-GET /api/instance_states?format=xml HTTP/1.1
-Authorization: Basic AU1J3UB2121Afd1DdyQWxLaTYTmJMNF4zTXBoRGdhMDh2RUw5ZDAN9zVXVa==
-User-Agent: curl/7.20.1 (i386-redhat-linux-gnu)
-Host: localhost:3002
-Accept: */*
+$ pgpk -a KEYS
+$ pgpv deltacloud-core-1.0.0.tar.gz.asc
 </pre>
-
-<p>Server response:</p>
-
+<p>or</p>
 <pre>
-HTTP/1.1 200 OK
-Content-Type: application/xml
-Content-Length: 583
-
-&lt;states&gt;
-  &lt;state name='start'&gt;
-    &lt;transition action='create' to='pending'&gt;&lt;/transition&gt;
-  &lt;/state&gt;
-  &lt;state name='pending'&gt;
-    &lt;transition auto='true' to='running'&gt;&lt;/transition&gt;
-  &lt;/state&gt;
-  &lt;state name='running'&gt;
-    &lt;transition action='reboot' to='running'&gt;&lt;/transition&gt;
-    &lt;transition action='stop' to='shutting_down'&gt;&lt;/transition&gt;
-  &lt;/state&gt;
-  &lt;state name='shutting_down'&gt;
-    &lt;transition auto='true' to='stopped'&gt;&lt;/transition&gt;
-  &lt;/state&gt;
-  &lt;state name='stopped'&gt;
-    &lt;transition auto='true' to='finish'&gt;&lt;/transition&gt;
-  &lt;/state&gt;
-  &lt;state name='finish'&gt;
-  &lt;/state&gt;
-&lt;/states&gt;
+$ pgp -ka KEYS
+$ pgp deltacloud-core-1.0.0.tar.gz.asc
 </pre>
-
-<p><a class="btn btn-inverse btn-large" style="float: right" href="instances.html">Instances <i class="icon-arrow-right icon-white" style="vertical-align:baseline"> </i></a></p>
-
-<p><br></p>
+<p>or</p>
+<pre>
+$ gpg --import KEYS
+$ gpg --verify deltacloud-core-1.0.0.tar.gz.asc
+</pre>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
