--- a/site/output/index.html
+++ b/site/output/index.html
@@ -47,6 +47,7 @@
       <li><a href="/supported-providers.html">Supported Providers</a></li>
     </ul>
   </li>
+  <li><a href="/download.html">Download</a></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
     <ul class="dropdown-menu">
@@ -125,7 +126,7 @@
   <div class="span3 grad1 about">
     <blockquote>
       <p>
-      <strong>Current release:</strong><br><a class="btn btn-info" href="https://rubygems.org/gems/deltacloud-core" target="_blank"><b>deltacloud-core-1.0.0</b></a><br><small>More about <a href="install-deltacloud.html">installation</a>...</small>
+      <strong>Current release:</strong><br><a class="btn btn-info" href="download.html"><b>deltacloud-core-1.0.0</b></a><br><small>More about <a href="install-deltacloud.html">installation</a>...</small>
       </p>
       <br><p>
       <a class="btn btn-danger" href="how-to-contribute.html#bug">Found a bug?</a>
