--- a/site/output/write-new-driver.html
+++ b/site/output/write-new-driver.html
@@ -47,6 +47,7 @@
       <li><a href="/supported-providers.html">Supported Providers</a></li>
     </ul>
   </li>
+  <li><a href="/download.html">Download</a></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
     <ul class="dropdown-menu">
