Site Docs: adds cURL examples and deprecation notice for deltacloudc

--- a/site/output/usage.html
+++ b/site/output/usage.html
@@ -94,7 +94,7 @@
 <p>Instead of dealing with HTTP interface you can use various clients to communicate with Deltacloud server.</p>
 
 <h3>The Deltacloud Ruby Client</h3>
-<p>You need to install Ruby client seperately to the Deltacloud API server. Assuming you already have Ruby and RubyGems setup, you can install the Deltacloud client by simply typing: </p>
+<p>You need to install Ruby client seperately to the Deltacloud API server. Assuming you already have Ruby and RubyGems setup, you can install the Deltacloud client by simply typing:</p>
 
 <pre>$ sudo gem install deltacloud-client</pre>
 
@@ -210,7 +210,10 @@ http://localhost:3001/api/buckets/mybucket/my_new_blob?format=xml
 The <strong>'-iv'</strong> flags will ensure that cURL displays the request and response headers (blob metadata are reported in the response headers with an empty response body).
 </p>
 
-<h3>Libdeltacloud Client (C library)</h3>
+
+<a class="btn btn-inverse btn-large" style="float: right" href="curl-examples.html">Working with cURL</a>
+
+<br><br><h3>Libdeltacloud Client (C library)</h3>
 <p>
 Libdeltacloud is a C/C++ library for accessing the Deltacloud API. It exports convenient structures and functions for manipulating cloud objects through the Deltacloud API.
 </p>
@@ -225,7 +228,7 @@ As of version 0.9, libdeltacloud is mostly <strong>API stable</strong>, but not 
 </p>
 
 <p>
-Due to the magic of libtool versioning, programs built against an older version of libdeltacloud will refuse to run against a newer version of libdeltacloud if the size of the structures has changed. If this happens, then the program must be recompiled against the newer libdeltacloud. 
+Due to the magic of libtool versioning, programs built against an older version of libdeltacloud will refuse to run against a newer version of libdeltacloud if the size of the structures has changed. If this happens, then the program must be recompiled against the newer libdeltacloud.
 </p>
 
 <a class="btn btn-inverse btn-large" style="float: right" href="http://deltacloud.apache.org/libdeltacloud/index.html">Libdeltacloud documentation</a>
