site: mention CIMI and EC2 frontends

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -99,6 +99,7 @@
       <ul>
 <li>an opportunity to manage cloud instances the way you want</li>
         <li>a way to protect your apps from cloud API changes and incompatitibilities</li>
+        <li>three frontends: 'classic' Deltacloud, DMTF CIMI, and EC2</li>
         <li>support for all major <a class="providers" href="drivers.html#drivers" title="Supported providers">cloud service providers</a>
 </li>
         <li>makes it easy for cloud providers to <a href="how-to-contribute.html">add their cloud</a>
@@ -126,7 +127,7 @@
   <div class="span3 grad1 about">
     <blockquote>
       <p>
-      <strong>Current release:</strong><br><a class="btn btn-info" href="download.html"><b>deltacloud-core-1.0.0</b></a><br><small>More about <a href="install-deltacloud.html">installation</a>...</small>
+      <strong>Current release:</strong><br><a class="btn btn-info" href="download.html"><b>deltacloud-core-1.0.2</b></a><br><small>More about <a href="install-deltacloud.html">installation</a>...</small>
       </p>
       <br><p>
       <a class="btn btn-danger" href="how-to-contribute.html#bug">Found a bug?</a>
