Site: rename IBM SBC to IBM SmartCloud

--- a/site/output/credentials.html
+++ b/site/output/credentials.html
@@ -136,7 +136,7 @@
     </tr>
 <tr>
 <td style="text-align:left">
-        <strong>IBM SBC</strong>
+        <strong>IBM SmartCloud</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">sbc</span></td>
       <td style="text-align:left">Username</td>
