--- a/site/output/supported-providers.html
+++ b/site/output/supported-providers.html
@@ -154,7 +154,7 @@
     </tr>
 <tr>
 <td class="provider">
-        <strong>IBM SBC</strong>
+        <strong>IBM SmartCloud</strong>
       </td>
       <td>yes</td>
       <td>yes</td>
@@ -424,7 +424,7 @@
     </tr>
 <tr>
 <td style="text-align:left">
-        <strong>IBM SBC</strong>
+        <strong>IBM SmartCloud</strong>
       </td>
       <td style="text-align:left"><span style="font-size:x-small">sbc</span></td>
       <td style="text-align:left">Username</td>
