Site: mention that we turn virt mgmt into cloud

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -104,6 +104,7 @@
 </li>
         <li>makes it easy for cloud providers to <a href="how-to-contribute.html">add their cloud</a>
 </li>
+        <li>lets you use your RHEV-M and vSphere installations as a cloud</li>
       </ul>
 <a class="btn btn-large btn-primary" style="float:right" href="about.html">Learn more</a>
 
