--- a/site/output/supported-providers.html
+++ b/site/output/supported-providers.html
@@ -292,6 +292,20 @@
       <td>yes</td>
       <td>yes</td>
     </tr>
+<tr>
+<td class="provider">
+        <strong>Aruba cloud.it</strong>
+      </td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+      <td>yes</td>
+    </tr>
 </tbody>
 </table><p><br></p>
 <h4>Storage Driver Functionality</h4>
@@ -504,6 +518,15 @@
       <td style="text-align:left">OpenStack user</td>
       <td style="text-align:left">OpenStack user password</td>
       <td style="text-align:left">Set environment variable API_PROVIDER to the URL of OpenStack API entrypoint.</td>
+    </tr>
+<tr>
+<td style="text-align:left">
+        <strong>Aruba cloud.it</strong>
+      </td>
+      <td style="text-align:left"><span style="font-size:x-small">aruba</span></td>
+      <td style="text-align:left">Username</td>
+      <td style="text-align:left">Password</td>
+      <td style="text-align:left"></td>
     </tr>
 </tbody>
 </table>
