--- a/site/output/drivers.html
+++ b/site/output/drivers.html
@@ -496,14 +496,11 @@ The following table gives details about the credentials that must be provided fo
       <td>User certificate's folder name</td>
       <td>User certificate's passphrase</td>
       <td>
-      <p>Set the environment variable FGCP_CERT_DIR to a folder where the folder with UserCert.p12 is stored or place UserCert.p12 in</p>
-<p><code style="font-size:small; color:#606060">
-~/.deltacloud/config/fgcp/&lt;Username&gt;/
-</code>  or</p>
-<p><code style="font-size:small; color:#606060">
-%USERPROFILE%\.deltacloud\config\fgcp\&lt;Username&gt;\
-</code></p>
-      <p style="margin-bottom:0px">in Windows. Then use Username to authenticate.</p>
+        <p>Set the environment variable FGCP_CERT_DIR to a folder where the folder with UserCert.p12 is stored or place UserCert.p12 in</p>
+          <pre> ~/.deltacloud/drivers/fgcp/&lt;Username&gt;/ </pre>
+          in a linux environment, or
+          <pre> %USERPROFILE%\.deltacloud\drivers\fgcp\&lt;Username&gt;\ </pre>
+          in Windows. Then use Username to authenticate.
       </td>
     </tr>
 <tr>
@@ -699,12 +696,20 @@ The OpenNebula driver has been updated to support v3.x of the OpenNebula API. Th
     <div id="fgcp" class="accordion-body collapse">
       <div class="accordion-inner">
       <p>
-      When you use the Fujitsu FGCP driver, do not authenticate with your FGCP Portal username. Use the name of the folder in which your UserCert.p12 is stored. UserCert.p12 can be issued from the Portal and it is the same as you use to access MyPortal.
+      When you use the Fujitsu FGCP driver, do not authenticate with your FGCP Portal username. Use the name of the folder in which your UserCert.p12 is stored. UserCert.p12 is the certificate you issued on the FGCP Portal to access MyPortal.
       </p>
       <p>
-      Set the enviroment variable FGCP_CERT_DIR to override the default path <strong>~/.deltacloud/config/fgcp/</strong> to locate the Username folder with the UserCert.p12 file.
+      Set the environment variable FGCP_CERT_DIR to override the default path <strong>~/.deltacloud/drivers/fgcp/</strong> to locate the Username folder with the UserCert.p12 file.
       </p>
-      </div>
+      <p>
+      FGCP virtual systems and networks are both mapped to realms:
+      </p>
+<ul>
+<li>Creating a firewall is equivalent to creating a FGCP virtual system. Specify a system descriptor ID as firewall description (e.g. "1-tier Skeleton").</li>
+      <li>Destroying a firewall destroys the virtual system. All instances in it need to be in the STOPPED state. This operation first stops the firewall and therefore it can take five minutes until the firewall actually disappears.</li>
+      <li>When creating an instance, specify a network segment realm as target location.</li>
+      </ul>
+</div>
     </div>
   </div>
   <div class="accordion-group">
