site: link to install instructions for OS X

--- a/site/output/install-deltacloud.html
+++ b/site/output/install-deltacloud.html
@@ -210,6 +210,11 @@ $ sudo apt-get install make
 
 <p><br></p>
 
+<h3>OS X</h3>
+
+<p>Instructions on setting up Deltacloud on Apple’s OS X can be found <a href="https://cwiki.apache.org/confluence/display/DTACLOUD/Deltacloud+API+development+setup+on+OSX">on
+the Wiki</a>. Note that they require using homebrew.</p>
+
 <h3>Installation of Deltacloud itself</h3>
 <p>Once you've setup all the dependencies listed above, installing Deltacloud is as easy. Type:</p>
 
