SITE - update contact page with links to deltacloud community call

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -100,6 +100,24 @@
   </li>
 </ul><p>Please don't hesitate to get in touch if you have any questions about the project, if you've had any issues with installing or using Deltacloud or even just to tell us how great you think Deltacloud is!</p>
 
+<hr><h2>Deltacloud Community Calls</h2>
+
+<p>We are trying to establish regular community calls - right now they are held weekly every Thursday - at @ 1700 CET (Prague, Brno, GMT+1) - which means 0800 PST (US West Coast, GMT-8) or 1100 EST (US East Coast, GMT-5). These calls are open to anyone that is interested in Deltacloud - please contact us if you’d like to join the next call.</p>
+
+<p>For now we’re using an <a href="http://openetherpad.org/DeltacloudCall">etherpad</a> to keep track of the agenda. Feel free to add items there that you’d like to see addressed in future calls. Calls and agenda are announced on the  <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a> mailing list.</p>
+
+<p><br></p>
+
+<h3>Past Calls:</h3>
+
+<p><a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
+
+<p>Agenda: Working with Deltacloud API clients, Contributing patches, review process, etc</p>
+
+<p><a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
+
+<p>Agenda: Networking API discussion, Writing Deltacloud API tests</p>
+
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
         <div class='row'>
