Site: update links for Community Call #4

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -112,15 +112,19 @@
 
 <p><br><a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
 
-<p>Agenda: Working with Deltacloud API clients, Contributing patches, review process, etc</p>
+<p>Working with Deltacloud API clients, Contributing patches, review process, etc</p>
 
 <p><br><a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
 
-<p>Agenda: Networking API discussion, Writing Deltacloud API tests</p>
+<p>Networking API discussion, Writing Deltacloud API tests</p>
 
 <p><br><a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
 
-<p>Agenda: Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
+<p>Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
+
+<p><br><a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
+
+<p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
