SITE: update links for Community Call #5

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -126,6 +126,10 @@
 
 <p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
 
+<p><br><a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
+
+<p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
+
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
         <div class='row'>
