--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -137,6 +137,10 @@
 
 <p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
 
+<p><br><a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
+
+<p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
+
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
         <div class='row'>
