--- a/site/output/cimi-rest/cimi-rest-machine-images.html
+++ b/site/output/cimi-rest/cimi-rest-machine-images.html
@@ -110,17 +110,34 @@ A Machine Image Collection resource represents the collection of Machine Image r
   </div>
   <div class="span3">
 
+
 <ul class="nav nav-list well">
 <li class="nav-header">
     CIMI REST API
   </li>
-  <li><a href="cimi-rest.html">Introduction</a></li>
+  <li><a href="../cimi-rest.html">Introduction</a></li>
   <li><a href="cimi-rest-entry-point.html">Cloud Entry Point</a></li>
-  <li><a href="cimi-rest-collections.html">CIMI Resources</a></li>
-    <ul class="nav nav-list">
-<li><a href="cimi-rest-collections.html">Machine</a></li>
-      <li class="active"><a href="cimi-rest-machine-images.html">MachineImage</a></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      CIMI Resources
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-collections.html">Machine</a></li>
+      <li><a href="cimi-rest-volumes.html">Volume</a></li>
     </ul>
+</li>
+  <hr>
+<li class="nav-header">
+    Machine Resources
+  </li>
+  <ul class="nav nav-list">
+<li><a href="cimi-rest-collections.html">Machine</a></li>
+    <li class="active"><a href="cimi-rest-machine-images.html">MachineImage</a></li>
+    <li><a href="cimi-rest-machine-configs.html">MachineConfiguration</a></li>
+    <li><a href="cimi-rest-machine-templates.html">MachineTemplate</a></li>
+  </ul>
 </ul>
 </div>
 
