--- a/site/output/cimi-rest/cimi-rest-entry-point.html
+++ b/site/output/cimi-rest/cimi-rest-entry-point.html
@@ -107,7 +107,7 @@ Entry Point implements a catalog of resources, such as Systems, System Templates
 Templates, etc., that can be queried and browsed by the Consumer.</em></strong>
 </p>
 <p>
-A deltacloud server exposes the CIMI Cloud Entry Point at /cimi/cloudEntryPoint. When dereferencing this URI, the resources listed in the response include only those that are supported by the current deltacloud driver - whether the 'default' driver the server was started with, or that specified with the <a href="drivers.html">X-Deltacloud-Driver</a> header.
+A deltacloud server exposes the CIMI Cloud Entry Point at /cimi/cloudEntryPoint. When dereferencing this URI, the resources listed in the response include only those that are supported by the current deltacloud driver - whether the 'default' driver the server was started with, or that specified with the <a href="../drivers.html">X-Deltacloud-Driver</a> header.
 </p>
 
  </div>
@@ -118,9 +118,20 @@ A deltacloud server exposes the CIMI Cloud Entry Point at /cimi/cloudEntryPoint.
 <li class="nav-header">
     CIMI REST API
   </li>
-  <li><a href="cimi-rest.html">Introduction</a></li>
+  <li><a href="../cimi-rest.html">Introduction</a></li>
   <li class="active"><a href="cimi-rest-entry-point.html">Cloud Entry Point</a></li>
-  <li><a href="cimi-rest-collections.html">CIMI Resources</a></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      CIMI Resources
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+<li><a href="cimi-rest-resource-metadata.html">ResourceMetadata</a></li>
+      <li><a href="cimi-rest-collections.html">Machine</a></li>
+      <li><a href="cimi-rest-volumes.html">Volume</a></li>
+    </ul>
+</li>
+
 </ul>
 </div>
 
