SITE: fix nits in CIMI docs - update links and nav bar

--- a/site/output/about.html
+++ b/site/output/about.html
@@ -73,7 +73,8 @@
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">API<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="/rest-api.html">REST API</a></li>
+      <li><a href="/rest-api.html">Deltacloud REST API</a></li>
+      <li><a href="/curl-examples.html">Deltacloud API cURL examples</a></li>
       <li><a href="/drivers.html">Drivers API</a></li>
     </ul>
   </li>
@@ -99,13 +100,13 @@
 <div class="span4">
 
 <br><h3>About Deltacloud</h3>
-<br><p>Deltacloud provides the API server and drivers necessary for connecting to cloud providers.</p> 
+<br><p>Deltacloud provides the API server and drivers necessary for connecting to cloud providers.</p>
 
 <p>Deltacloud maintains <strong>long-term stability</strong> for scripts, tools and applications and <strong>backward compatibility</strong> across different versions.</p>
 
-<p>Using single API Deltacloud enables management of resources in different clouds.</p>
+<p>Using a single API Deltacloud enables management of resources in different clouds. This 'single API' can be the <a href="rest-api.html">Deltacloud</a> classic API, the DMTF <a href="cimi-rest.html">CIMI API</a> or even the EC2 API.</p>
 
-<p>Start an instance on an internal cloud, then with the same code start another on EC2 or RHEV-M.</p>
+<p>All of this means you can start an instance on an internal cloud and with the same code start another on EC2 or RHEV-M.</p>
 </div>
 
 <br><div class="span8">
@@ -115,9 +116,9 @@
 <div class="span12">
 
 <br><br><h3>How does Deltacloud work?</h3>
-<br><p>Deltacloud contains a cloud abstraction API. The API works as a wrapper around a large number of clouds, abstracting their differences. For every <a href="supported-providers.html" rel="tooltip" title="currently supported providers">provider</a> there is a driver "speaking" cloud provider's native API. It frees you from dealing with the particulars of each cloud's API.</p>
+<br><p>Deltacloud contains a cloud abstraction API - whether the <a href="rest-api.html">Deltacloud</a> classic API, the DMTF <a href="cimi-rest.html">CIMI API</a> or even the EC2 API. The API works as a wrapper around a large number of clouds, abstracting their differences. For every <a href="supported-providers.html" rel="tooltip" title="currently supported providers">provider</a> there is a driver "speaking" cloud provider's native API. It frees you from dealing with the particulars of each cloud's API.</p>
 
-<p>Install Deltacloud and start the <strong>deltacloudd</strong> daemon server. You can use your favourite HTTP client to talk to the server using the <a href="rest-api.html">Deltacloud REST API</a>. Deltacloud even comes with a HTML interface so you can simply use your web browser to control your cloud infrastructure straight out of the box. The HTML interface is written with the <a href="http://jquerymobile.com/">jQuery mobile</a> framework, so it is compatible with your mobile or tablet devices.</p>
+<p>Install Deltacloud and start the <strong>deltacloudd</strong> daemon server. You can use your favourite HTTP client to talk to the server using the <a href="rest-api.html">Deltacloud REST API</a>, the DMTF <a href="cimi-rest.html">CIMI API</a> or even the EC2 API. Deltacloud even comes with a HTML interface so you can simply use your web browser to control your cloud infrastructure straight out of the box. The HTML interface is written with the <a href="http://jquerymobile.com/">jQuery mobile</a> framework, so it is compatible with your mobile or tablet devices.</p>
 <br><img src="assets/img/deltacloud_concept.gif" alt="Deltacloud concept scheme"><br><a class="btn btn-inverse btn-large" style="float: right" href="install-deltacloud.html">Get Deltacloud</a>
 
 </div>
