--- a/site/output/index.html
+++ b/site/output/index.html
@@ -73,7 +73,8 @@
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">API<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="/rest-api.html">REST API</a></li>
+      <li><a href="/rest-api.html">Deltacloud REST API</a></li>
+      <li><a href="/curl-examples.html">Deltacloud API cURL examples</a></li>
       <li><a href="/drivers.html">Drivers API</a></li>
     </ul>
   </li>
@@ -106,7 +107,7 @@
       <ul>
 <li>an opportunity to manage cloud instances the way you want</li>
         <li>a way to protect your apps from cloud API changes and incompatitibilities</li>
-        <li>three frontends: 'classic' Deltacloud, DMTF CIMI, and EC2</li>
+        <li>three frontends: 'classic' <a href="rest-api.html">Deltacloud</a>, DMTF <a href="cimi-rest.html">CIMI</a>, and EC2</li>
         <li>support for all major <a class="providers" href="drivers.html#drivers" title="Supported providers">cloud service providers</a>
 </li>
         <li>makes it easy for cloud providers to <a href="how-to-contribute.html">add their cloud</a>
