--- a/site/output/cimi-rest/cimi-rest-machine-templates.html
+++ b/site/output/cimi-rest/cimi-rest-machine-templates.html
@@ -73,7 +73,8 @@
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">API<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="/rest-api.html">REST API</a></li>
+      <li><a href="/rest-api.html">Deltacloud REST API</a></li>
+      <li><a href="/curl-examples.html">Deltacloud API cURL examples</a></li>
       <li><a href="/drivers.html">Drivers API</a></li>
     </ul>
   </li>
@@ -118,7 +119,7 @@ machineConfiguration + machineImage = machineTemplate ===&gt; machine
 </pre>
 
 <p>
-A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine Template to <a href="../cimi-rest-collections.html#create-machine"> create a new Machine</a>; a Machine Template consists of (amongst other attributes) a Machine Configuration and a Machine Image. Generally speaking - many CIMI resources require use of a template for their creation and a template will typically consist of an image plus a configuration resource.
+A CIMI client (a <strong>consumer</strong> in CIMI terminology) uses a Machine Template to <a href="cimi-rest-collections.html#create-machine"> create a new Machine</a>; a Machine Template consists of (amongst other attributes) a Machine Configuration and a Machine Image. Generally speaking - many CIMI resources require use of a template for their creation and a template will typically consist of an image plus a configuration resource.
 </p>
 
   </div>
