Site - update links for community call #8

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -141,6 +141,10 @@
 
 <p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
 
+<p><br><a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a></p>
+
+<p>Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers</p>
+
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
         <div class='row'>
